@@ -28,7 +28,8 @@ HDP_JOBTRACKER=172.16.2.187:8050
 HDP_NODES=8
 HDP_HEAP=40g
 
-HDP_JAR=h2odriver_hdp2.0.6.jar
+# HDP_JAR=h2odriver_hdp2.0.6.jar
+HDP_JAR=h2odriver_hdp2.1.jar
 H2O_JAR=h2o.jar
 
 # build.sh removes the h2odriver stuff a 'make' creates
@@ -62,7 +63,7 @@ REMOTE_SSH_USER_WITH_JAVA="$REMOTE_SSH_USER $SET_JAVA_HOME"
 
 #*****HERE' WHERE WE START H2O ON HADOOP*******************************************
 rm -f /tmp/h2o_on_hadoop_$REMOTE_IP.sh
-echo "$SET_JAVA_HOME" > /tmp/h2o_on_hadoop_$REMOTE_IP.sh
+echo "$SET_JAVA_HOME" > /tmp/h2o_on_hadoop_$REMOTE_IP.sh; chmod 777 /tmp/h2o_on_hadoop_$REMOTE_IP.sh
 echo "cd /home/0xcustomer" >> /tmp/h2o_on_hadoop_$REMOTE_IP.sh
 # h2o_one_node is the file created by the h2odriver
 echo "rm -fr h2o_one_node" >> /tmp/h2o_on_hadoop_$REMOTE_IP.sh
@@ -73,7 +74,42 @@ chmod +x /tmp/h2o_on_hadoop_$REMOTE_IP.sh
 set -e
 
 echo "port: start looking at 55821. Don't conflict with jenkins using all sorts of ports starting at 54321 (it can multiple jobs..so can use 8*10 or so port)"
-echo "hadoop jar $HDP_JAR water.hadoop.h2odriver -jt $HDP_JOBTRACKER -libjars $H2O_JAR -baseport 55821 -mapperXmx $HDP_HEAP -nodes $HDP_NODES -output $HDFS_OUTPUT -notify h2o_one_node " >> /tmp/h2o_on_hadoop_$REMOTE_IP.sh
+
+# EA=" -ea"
+# ApiWatchdog fail if I use -ea?
+EA=""
+# FIX! how to pass -random_udp_drop thru h2odriver?
+# Limit cores to see what happens
+# h2o checks that it's >=4
+# does this has to be greater than the # of jvms? it's a total, not a per jvm total?
+# THREADS=" -nthreads 8"
+# THREADS=" -nthreads 200"
+# DROP=" -random_udp_drop"
+DROP=""
+echo "hadoop jar $HDP_JAR water.hadoop.h2odriver -jt $HDP_JOBTRACKER -libjars $H2O_JAR -baseport 55821 -mapperXmx $HDP_HEAP -nodes $HDP_NODES -output $HDFS_OUTPUT -notify h2o_one_node $EA $DROP" >> /tmp/h2o_on_hadoop_$REMOTE_IP.sh
+
+# Usage: h2odriver
+#           -libjars <.../h2o.jar>
+#           [other generic Hadoop ToolRunner options]
+#           [-h | -help]
+#           [-jobname <name of job in jobtracker (defaults to: 'H2O_nnnnn')>]
+#               (Note nnnnn is chosen randomly to produce a unique name)
+#           [-driverif <ip address of mapper->driver callback interface>]
+#           [-driverport <port of mapper->driver callback interface>]
+#           [-network <IPv4network1Specification>[,<IPv4network2Specification> ...]
+#           [-timeout <seconds>]
+#           [-disown]
+#           [-notify <notification file name>]
+#           -mapperXmx <per mapper Java Xmx heap size>
+#           [-extramempercent <0 to 20>]
+#           -n | -nodes <number of H2O nodes (i.e. mappers) to create>
+#           [-nthreads <maximum typical worker threads, i.e. cpus to use>]
+#           [-baseport <starting HTTP port for H2O nodes; default is 54321>]
+#           [-ea]
+#           [-verbose:gc]
+#           [-XX:+PrintGCDetails]
+#           [-license <license file name (local filesystem, not hdfs)>]
+#           -o | -output <hdfs output dir>
 
 # copy the script, just so we have it there too
 $REMOTE_SCP /tmp/h2o_on_hadoop_$REMOTE_IP.sh $REMOTE_USER:$REMOTE_HOME
@@ -123,7 +159,7 @@ cp -f h2o_one_node sandbox
 
 echo "Touch all the 0xcustomer-datasets mnt points, to get autofs to mount them."
 echo "Permission rights extend to the top level now, so only 0xcustomer can automount them"
-echo "okay to ls the top level here...no secret info..do all the machines hadoop (cdh3) might be using"
+echo "okay to ls the top level here...no secret info..do all the machines hadoop (cdh4) might be using"
 for mr in 181 182 183 184 185 186 187 188 189 190
 do
     ssh -i $HOME/.0xcustomer/0xcustomer_id_rsa 0xcustomer@172.16.2.$mr 'cd /mnt/0xcustomer-datasets'
@@ -154,16 +190,21 @@ myPy() {
 # myPy c1 test_c1_rel.py
 
 # worked
-myPy c2 test_c2_rel.py
+myPy c2 test_c2_fvec.py
+myPy c6 test_c6_hdfs_fvec.py
+myPy c9 test_c9_GLM_airlines_hdfs_multi.py
+
 # myPy c3 test_c3_rel.py
 # test_c8_rf_airlines_hdfs_fvec.py
 # test_c4_four_billion_rows_fvec.py
 # myPy c5 test_c5_KMeans_sphere_h1m_fvec.py
+
+# GOOD!
 myPy c5 test_c5_KMeans_sphere_26GB_fvec.py
+
 # myPy c5 test_c5_KMeans_sphere15_180GB_fvec.py
 
 # have to update this to poit to the right hdfs?
-# myPy c6 test_c6_hdfs_fvec.py
 
 # If this one fails, fail this script so the bash dies 
 # We don't want to hang waiting for the cloud to terminate.
